--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -6,7 +6,7 @@
 \version{0.0.1}
 \creaz{28 dicembre 2016}
 \author{\LS, \AZ}
-\supervisor{verificatori}
+\supervisor{\GG}
 \uso{esterno}
 \dest{\TV, \ZU}
 \title{Piano di Qualifica}
@@ -222,8 +222,8 @@
 		\begin{itemize}
 			\item il prodotto possiede le funzionalità descritte all'interno dei requisiti obbligatori e gran parte di funzionalità descritte all'interno dei requisiti desiderabili --- Sezione \ref{S1};
 			\item il prodotto è testato negli aspetti più importanti e in determinate situazioni nelle quali esso si può trovare --- Sezione \ref{S2};
-			\item il prodotto presenta codice senza elevati gradi di complessità relativamente ad alcuni vincoli definiti –-- Sezione \ref{S3};
-			\item il codice risulta manutenibile e facilmente comprensibile –-- Sezione \ref{S4};
+			\item il prodotto presenta codice senza elevati gradi di complessità relativamente ad alcuni vincoli definiti --- Sezione \ref{S3};
+			\item il codice risulta manutenibile e facilmente comprensibile --- Sezione \ref{S4};
 		\end{itemize}
 	\subsection{Scadenze temporali}
 	Le scadenze temporali stabilite dal gruppo sono definite in dettaglio nel documento \PdP.
@@ -337,7 +337,7 @@
 				\end{itemize}
 				
 			\paragraph{Indice di Gulpease}
-			Tale metrica, tarata sulla lingua italiana, misura la qualità di un documento andando a stimarne il grado di leggibilità. Rispetto ad altri indici equivalenti per campo di applicazione ha il vantaggio di esprimere la lunghezza media delle parole in lettere anziché in sillabe – cosa che ne consente una implementazione automatizzata fortemente affidabile. Tale indice, inoltre, considera principalmente due variabili linguistiche: la lunghezza delle parole e la lunghezza delle frasi in rapporto al numero delle lettere.
+			Tale metrica, tarata sulla lingua italiana, misura la qualità di un documento andando a stimarne il grado di leggibilità. Rispetto ad altri indici equivalenti per campo di applicazione ha il vantaggio di esprimere la lunghezza media delle parole in lettere anziché in sillabe --- cosa che ne consente una implementazione automatizzata fortemente affidabile. Tale indice, inoltre, considera principalmente due variabili linguistiche: la lunghezza delle parole e la lunghezza delle frasi in rapporto al numero delle lettere.
 			\\La formula per il calcolo dell'indice di \gloss{Gulpease} è la seguente:
 				\begin{equation}
 					89+\frac{300\times(numero~delle~frasi)-10\times(numero~delle~lettere)}{numero~delle~parole}
@@ -579,5 +579,5 @@
 		\item \textbf{Test di sistema [TS]:} test con i quali si tenta di verificare che il funzionamento e il comportamento dell'architettura siano corretti;
 		\item \textbf{Test di accettazione [TA]:} test per verificare che il prodotto soddisfi le richieste del proponente.
 	\end{itemize}
-	Si sottolinea che la specifica dei test delle diverse tipologie verrà inserita nel presente documento a seguito della fase di progettazione del \gloss{prodotto} in esame.
+	Si sottolinea che la specifica dei test delle diverse tipologie verrà inserita nel presente documento a seguito della fase di progettazione del prodotto in esame.
 \end{document}
