--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_5.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_5.tex
@@ -455,11 +455,11 @@ Il gruppo ha quindi adottato i servizi offerti da \gloss{Asana}, accoppiato a \g
 	\item disegno di diagrammi di pianificazione.
 \end{itemize}
 \subsubsection{Riunioni}
-			Spetta al \textit{responsabile di progetto} convocare le riunioni quando lo ritiene necessario. È possibile da una qualsiasi persona del team fare richiesta di una riunione al \textit{responsabile di progetto}. Quest'ultimo poi ha il compito di decidere se è utile svolgerla.  Per informare i membri della riunione si utilizza la piattaforma di comunicazione \textit{Slack},proponendo una data, un luogo, l'ordine del giorno e chi ha chiesto la riunione. I membri del gruppo devono quindi rispondere tempestivamente per poter confermare la presenza.
+			Spetta al responsabile di progetto convocare le riunioni quando lo ritiene necessario. È possibile da una qualsiasi persona del team fare richiesta di una riunione al responsabile di progetto. Quest'ultimo poi ha il compito di decidere se è utile svolgerla.  Per informare i membri della riunione si utilizza la piattaforma di comunicazione \textit{Slack},proponendo una data, un luogo, l'ordine del giorno e chi ha chiesto la riunione. I membri del gruppo devono quindi rispondere tempestivamente per poter confermare la presenza.
 			\paragraph{Riunioni interne}
 				Viene nominato un segretario ad inizio di ogni riunione che ha il compito di scrivere la minuta dell'incontro. A fine riunione deve inoltre redigere un verbale,il quale viene caricato nella repository insieme agli altri documenti per essere disponibile per la lettura ai membri. I partecipanti devono tenere un comportamento adeguato a favore la discussione dell'ordine del giorno.
 			\paragraph{Riunioni esterne}
-				Il \textit{responsabile di progetto} fissa le riunioni esterne contattando il committente tramite posta elettronica,accordandosi per la data e il luogo da poi riferire ai membri del gruppo.
+				Il responsabile di progetto fissa le riunioni esterne contattando il committente tramite posta elettronica,accordandosi per la data e il luogo da poi riferire ai membri del gruppo.
 				Ad ogni riunione viene chiesto al committente di poter registrare la riunione in modo da poter redigere un verbale accurato e dare la possibilità di riascoltarla anche ad eventuali membri non presenti.Viene nominato anche qui un segretario che scriverà il verbale. Nel caso non fosse stato possibile registrare la riunione il verbale sarà redatto da tutto il team in modo da tralasciare il meno possibile contenuti.
 			\paragraph{Verbali}
 				I verbali che vengono redatti dal segretario(o dal tutto il team in mancanza di registrazione audio) riassumono in modo sintetico ma preciso cosa o stato discusso nella riunione. 
@@ -470,12 +470,12 @@ Il gruppo ha quindi adottato i servizi offerti da \gloss{Asana}, accoppiato a \g
 					\item luogo dell'incontro;
 					\item oggetto della riunione,ossia l'ordine del giorno;
 					\item il segretario;
-					\item i partecipanti alla riunione;
+					\item i partecipanti alla riunione.
 				\end{itemize}
 				Sotto poi è presente un riassunto esaustivo riguardo le decisione prese rispetto agli argomenti trattati,eventuali dubbi e problemi ed eventuali compiti assegnati.
 		\subsubsection{comunicazioni esterne}
-			Per le comunicazioni esterne il gruppo ha creato un indirizzo di posta elettronica \url{mailto:hivex.team@gmail.com}.
-			È compito del \textit{responsabile di progetto} comunicare con il committente e l'università e informare i restanti membri di cosa si è discusso. %magari si può anche dire che abbiamo l'inoltro automatico per infomare gli altri.
+			Per le comunicazioni esterne il gruppo ha creato un indirizzo di posta elettronica (\email).
+			È compito del responsabile di progetto comunicare con il committente e l'università e informare i restanti membri di cosa si è discusso. %magari si può anche dire che abbiamo l'inoltro automatico per infomare gli altri.
 
 \subsubsection{Comunicazione intra-gruppo} 
 Una comunicazione tra i membri del gruppo è essenziale per la buona riuscita di ogni progetto. Il gruppo ritiene che un buon sistema di comunicazione debba possedere le seguenti caratteristiche:
@@ -517,7 +517,7 @@ Il numero di canali non dev'essere più di tre volte il numero di componenti del
 	Verranno assegnati dei ruoli corrispondenti a quelli professionali per lo sviluppo del progetto.
 	Ogni membro del team è tenuto a ricoprire almeno una volta tutti i ruoli sotto indicati. Sarà inoltre garantito che non si presentino conflitti di interesse se una persona è sia redattore che verificatore di uno stesso documento. È possibile ricoprire più ruoli contemporaneamente.
 		\paragraph{Responsabile di progetto}
-		Il \textit{responsabile di progetto} detiene la responsabilità di tutto il team ed il potere decisionale. Si occupa inoltre delle comunicazione esterne del team.
+		Il responsabile di progetto detiene la responsabilità di tutto il team ed il potere decisionale. Si occupa inoltre delle comunicazione esterne del team.
 		In particolare ha responsabilità riguardo a:
 		\begin{itemize}
 			\item Coordinamento, pianificazione e controllo delle attività;
@@ -539,18 +539,18 @@ Il numero di canali non dev'essere più di tre volte il numero di componenti del
 			\item Approvare in modo definito i documenti.
 		\end{itemize}
 		\paragraph{Amministratore}
-		L'\textit{amministratore} ha la responsabilità sull'ambiente di lavoro.
+		L'amministratore ha la responsabilità sull'ambiente di lavoro.
 		I suoi compiti sono quindi:
 		\begin{itemize}
 			\item Gestione ambiente di lavoro attrezzando il team di strumenti necessari;
 			\item Aggiungere all'ambiente di lavoro strumenti di automazione del lavoro;
 			\item Gestione e versionamento della documentazione;
 			\item Controllo versioni e configurazioni del prodotto;
-			\item Risoluzione problemi riguardanti la gestione delle risorse e dei processi;
+			\item Risoluzione problemi riguardanti la gestione delle risorse e dei processi.
 		\end{itemize}
-		L'\textit{amministratore} è incaricato di redigere le \textit{norme di progetto},la parte del \textit{piano di qualifica} riguardante metodi e strumenti di verifica e collabora alla stesura del \textit{piano di progetto}.
+		L'amministratore è incaricato di redigere le norme di progetto, la parte del piano di qualifica riguardante metodi e strumenti di verifica e collabora alla stesura del piano di progetto.
 		\paragraph{Analista}
-		L'\textit{analista} è responsabile di tutto quello che riguarda l'analisi del problema.
+		L'analista è responsabile di tutto quello che riguarda l'analisi del problema.
 		In particolare dovrà:
 		\begin{itemize}
 			\item Studiare a fondo natura e problematiche del prodotto che si andrà a realizzare;
@@ -559,24 +559,24 @@ Il numero di canali non dev'essere più di tre volte il numero di componenti del
 			\item Produrre una specifica di progetto precisa in ogni sui punto e comprensibile dal \gloss{proponente},dal \gloss{committente} e dai progettisti.
 			\item Redigere lo studio di fattibilità e l'analisi dei requisiti.
 		\end{itemize}
-		L'analista redige lo \textit{studio di fattibilità} e l'\textit{analisi dei requisiti}.
+		L'analista redige lo studio di fattibilità e l'analisi dei requisiti.
 		\paragraph{Progettista}
-		Il \textit{progettista} è responsabile delle attività di progettazione. Si occupa più in dettaglio di:
+		Il progettista è responsabile delle attività di progettazione. Si occupa più in dettaglio di:
 		\begin{itemize}
 			\item effettuare scelte progettuali volte ad applicare al prodotto soluzioni note ed ottimizzate;
 			\item effettuare scelte procedurali volte ad avere un prodotto facilmente espandibile e mantenibile;
 			\item produrre una soluzione comprensibile e soddisfacente per il committente.
 		\end{itemize}
-		Il \textit{progettista} redige la specifica tecnica, la definizione di prodotto e le sezione del \textit{piano di qualifica} riguardanti le \gloss{metriche} attività di verifica della programmazione.
+		Il progettista redige la specifica tecnica, la definizione di prodotto e le sezioni del piano di qualifica riguardanti le \gloss{metriche} delle attività di verifica della programmazione.
 		\paragraph{Programmatore}
-		Il \textit{programmatore} è responsabile delle attività di codifica e delle commenti ausiliarie necessari per il processo di verifica.
+		Il programmatore è responsabile delle attività di codifica e delle commenti ausiliarie necessari per il processo di verifica.
 		In particolare i suoi compiti sono:
 		\begin{itemize}
-			\item Implementare in modo rigoroso le soluzioni descritte dal \textit{progettista};
+			\item Implementare in modo rigoroso le soluzioni descritte dal progettista;
 			\item Scrivere codice documentato e che rispetti le convenzioni e le metriche stabilite;
 			\item Implementare i test da eseguire sul codice scritto necessari per l'attività di verifica.
 		\end{itemize}
-		Il \textit{programmatore}  ha il compito di redigere il manuale utente. 
+		Il programmatore  ha il compito di redigere il manuale utente. 
 		\paragraph{Verificatore}
 		Il verificatore è responsabile delle attività di verifica.
 		I suoi compiti sono:
@@ -584,7 +584,7 @@ Il numero di canali non dev'essere più di tre volte il numero di componenti del
 			\item Controllare la conformità del prodotto ad ogni stadio del sup ciclo di vita;
 			\item garantire che le attività attuate seguano le norme stabilite.
 		\end{itemize}
-		Il \textit{verificatore} redige la sezione del \textit{piano di qualifica} che illustra l'esito delle verifiche effettuate.
+		Il \textit{verificatore} redige la sezione del piano di qualifica che illustra l'esito delle verifiche effettuate.
 
 
 \subsubsection{Pianificazione}
