--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -16,7 +16,7 @@ Il sistema offrirà le seguenti funzionalità:
 	\item aiutare l'utente nella realizzazione della sua applicazione fornendo stereotipi e strumenti di supporto aggiuntivi coerenti con il dominio applicativo di riferimento.
 \end{itemize}
 
-L'editor dovrà infine essere fruibile dall'utente attraverso un \gloss{browser} desktop idoneo all'utilizzo delle tecnologie \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}.
+L'editor dovrà infine essere fruibile dall'utente attraverso un browser desktop idoneo all'utilizzo delle tecnologie \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}.
 }
 \newcommand{\presgloss}{
 Per rendere più semplice e chiara la comprensione ed evitare ogni ambiguità relativa ai termini utilizzati nei documenti, viene allegato il documento \Glossario, nel quale vengono raccolte le spiegazioni di termini tecnici o ambigui, di acronimi o abbreviazioni.
